# RAS-Eval

./: .gitignore  README.md  eval.py  main.py  pyproject.toml
data/logs/: deepseek-r1-tool-8b.jsonl  glm-4-flash.jsonl  llama3.2-3b.jsonl  qwen-max.jsonl  qwen-plus.jsonl  qwen2.5-1.5b-instruct.jsonl  qwen2.5-7b-instruct.jsonl  qwq-32b.jsonl
data/tasks/: asb_attack_tasks.json  asb_attack_template.json  asb_tasks.json  attack_tasks.json  attack_template.json  tasks-extension.json  tasks.json
environment/: AIethics.md  MonthlyReport.docx  MonthlyReport_backup.docx  ProjectReport.pptx  SalesData.xlsx  calendar.json  calendar.md  clock.json  converted_AIethics.md  converted_README.md  important.db  paper2410.md  papers.db  quantum.md  stock.db  system.db  temp.db  temp.docx  trash.db  trash.md
environment/reports/: MonthlyReport.docx
src/: __init__.py
src/agent/real_agent/: __init__.py
src/agent/real_agent/academic_agent/: agent.py
src/agent/real_agent/database_agent/: agent.py
src/agent/real_agent/excel_agent/: agent.py
src/agent/real_agent/general_agent/: agent.py
src/agent/real_agent/navigation_agent/: agent.py
src/agent/real_agent/ppt_agent/: agent.py
src/agent/real_agent/schedule_agent/: agent.py
src/agent/real_agent/stock_agent/: agent.py
src/agent/real_agent/system_agent/: agent.py
src/agent/real_agent/weather_agent/: agent.py
src/agent/simulated_agent/: __init__.py
src/attack/: injection.py
src/llm_core/: agent.py  llm.py
src/utils/: agent_utils.py  benchmark_utils.py  eval_utils.py  test_utils.py
(+99 files in other folders)
